# cosmos-evaluator

./: .bazelrc  .dazelrc  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md  pyproject.toml  requirements.in  requirements.txt
checks/: BUILD  config.yaml
checks/attribute_verification/: .env.example  BUILD  common.py  processor.py  question_generator.py  run.py  vlm_verifier.py
checks/attribute_verification/tests/: BUILD  common_test.py  processor_test.py  question_generator_test.py  run_test.py  vlm_verifier_test.py
checks/hallucination/: .env.example  BUILD  frame_processing.py  processor.py  run.py
checks/hallucination/tests/: BUILD  frame_processing_test.py  processor_test.py  run_test.py
checks/obstacle/: BUILD  api.py  hallucination_detector.py  hallucination_tracking.py  importance_filter.py  object_processor_base.py  object_processor_dynamic.py  overlap_detector.py  results.py  run.py  seg_helper.py  visualization_helper.py
checks/obstacle/tests/: BUILD  api_test.py  cwip_helper_test.py  hallucination_detector_test.py  hallucination_tracking_test.py  importance_filter_test.py  object_processor_base_test.py  object_processor_dynamic_test.py  object_processor_static_test.py  results_test.py  run_test.py  seg_helper_test.py  visualization_helper_test.py
checks/obstacle/tools/: BUILD  README.md  analyze_results.py  export_objects.py  export_viz_helper.py  prepare_batch_results.py
checks/rog_102_rds_hq/3d_crosswalks/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.tar
checks/rog_102_rds_hq/3d_road_boundaries/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.tar
checks/rog_102_rds_hq/3d_traffic_lights/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.tar
checks/rog_102_rds_hq/3d_traffic_signs/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.tar
checks/rog_102_rds_hq/3d_wait_lines/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.tar
checks/rog_102_rds_hq/all_object_info/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.tar
checks/rog_102_rds_hq/ftheta_intrinsic/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.tar
checks/rog_102_rds_hq/pinhole_intrinsic/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.tar
checks/rog_102_rds_hq/pose/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.tar
checks/sample_data/: BUILD
checks/utils/: BUILD  cli_common.py  config_manager.py  coord_transforms.py  cuboid.py  cv2_video_dataset.py  frame_processing.py  metadata_loader.py  multistorage.py  onnx.py  overlay_video_helper.py  polyline.py  profiler.py  rasterization.py  rds_data_loader.py  rds_geometry.py  scene_rasterizer.py  segformer.py  surface.py  types.py  video.py
checks/utils/tests/: BUILD  cli_common_test.py  config_manager_test.py  coord_transforms_test.py  cuboid_test.py  cv2_video_dataset_test.py  frame_processing_test.py  metadata_loader_test.py  multistorage_test.py  onnx_test.py  polyline_test.py  profiler_test.py  rasterization_test.py  rds_data_loader_test.py  scene_rasterizer_test.py  segformer_test.py  surface_test.py  video_helper_test.py  wm_bev_render_test.py
checks/utils/world_model/: BUILD  bev_render.py  camera_render.py
checks/vlm/: .env.example  BUILD  client_manager.py  preset_processor.py  run.py  utils.py
checks/vlm/config/: BUILD  README.md  endpoints.json  prompts.json
checks/vlm/tests/: BUILD  client_manager_test.py  preset_processor_test.py  run_test.py  utils_test.py
docs/: customization.md  deployment.md  getting-started.md
docs/checks/: attribute-verification.md  hallucination.md  obstacle.md  vlm-preset.md
docs/services/: framework.md
docs/tutorials/: custom-checker.md
output_dir/golden_hour_post/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.dynamic.object.results.json
output_dir/golden_hour_post/front_left/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.dynamic.object.results.json
output_dir/golden_hour_post/front_right/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.dynamic.object.results.json
output_dir/golden_hour_post/rear/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.dynamic.object.results.json
output_dir/golden_hour_post/rear_left/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.dynamic.object.results.json
output_dir/golden_hour_pre/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.dynamic.object.results.json
output_dir/golden_hour_pre/front_left/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.dynamic.object.results.json
output_dir/golden_hour_pre/front_right/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.dynamic.object.results.json
output_dir/golden_hour_pre/rear/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.dynamic.object.results.json
output_dir/golden_hour_pre/rear_left/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.dynamic.object.results.json
output_dir/golden_hour_pre/rear_right/: 253b88c7-bfe3-4ec5-8978-84396cbf81d2_1774063994755.dynamic.object.results.json
services/: BUILD  image_layers.bzl  local_ports.bzl  merge_dpkg_status.py  settings_base.py  utils.py
services/attribute_verification/: BUILD  THIRD-PARTY-NOTICES.txt  attribute_verification_service.py  packages.lock.json  packages.yaml  rest_api.py  settings.py
services/attribute_verification/tests/: BUILD  attribute_verification_service_test.py  rest_api_test.py  settings_test.py
services/framework/: BUILD  service_base.py  url_security.py
services/framework/protocols/: BUILD  request_handler.py  storage_provider.py  (+1 more)
services/hallucination/: BUILD  THIRD-PARTY-NOTICES.txt  hallucination_service.py  packages.yaml  rest_api.py  settings.py  version.bzl
services/obstacle_correspondence/: BUILD  THIRD-PARTY-NOTICES.txt  models.py  obstacle_correspondence_service.py  packages.lock.json  packages.yaml  rest_api.py  rest_api_common.py  settings.py  version.bzl
services/tests/: BUILD  settings_test.py  utils_test.py
services/vlm/: BUILD  THIRD-PARTY-NOTICES.txt  packages.lock.json  packages.yaml  rest_api.py  rest_api_common.py  service.py  settings.py
utils/: BUILD  bazel.py
utils/tests/: BUILD  bazel_test.py
(+45 files in other folders)
