# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:pip.bzl", "compile_pip_requirements")

exports_files(
    ["pyproject.toml"],
    visibility = ["//build/lint:__pkg__"],
)

alias(
    name = "format",
    actual = "//build/format:format_multirun",
)

alias(
    name = "format.check",
    actual = "//build/format:format_multirun.check",
)

compile_pip_requirements(
    name = "requirements",
    timeout = "long",
    src = "requirements.in",
    extra_args = [
        "--quiet",
        "--reuse-hashes",
        "--strip-extras",
        "--extra-index-url=https://download.pytorch.org/whl/cu128",
    ],
    requirements_txt = "requirements.txt",
    tags = [
        "no-coverage",
        "no-mypy",
    ],
)
