# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Define our project's Bazel module
module(
    name = "cosmos_evaluator",
    version = "0.1",
)

bazel_dep(name = "aspect_rules_lint", version = "2.2.0", dev_dependency = True)  # Formatting/linting rules
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)  # Buildifier for formatting Bazel files
bazel_dep(name = "rules_multirun", version = "0.13.0", dev_dependency = True)  # Multirun for running targets concurrently
bazel_dep(name = "rules_mypy", version = "0.40.0", dev_dependency = True)  # Mypy for type checking

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")  # Tar/mtree utilities for OCI image layer splitting
bazel_dep(name = "rules_distroless", version = "0.6.2")  # Bazel-native Debian package management for OCI images
bazel_dep(name = "rules_oci", version = "2.2.7")  # Open Containers Initiative rules
bazel_dep(name = "rules_pex", version = "0.1.1")  # PEX rules for building python executables inside distroless images
bazel_dep(name = "rules_pkg", version = "1.2.0")  # For creating tar archives
bazel_dep(name = "rules_python", version = "1.8.5")  # Python rules for building and testing
bazel_dep(name = "rules_shell", version = "0.6.1")  # Shell rules for building and testing

# Python toolchain setup
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.13",
)

# PEX toolchain setup
pex = use_extension("@rules_pex//pex:extensions.bzl", "pex")
pex.toolchain(
    name = "pex_toolchains",
    python_version = "3.13",
)
use_repo(pex, "pex_toolchains")

register_toolchains("@pex_toolchains//:all")

# Use an extension to call the pip_repository rule that invokes pip, with incremental set.
# Accepts a locked/compiled requirements file and installs the dependencies listed within.
# Those dependencies become available in a generated requirements.bzl file.
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    timeout = 1800,  # 30 minutes
    extra_pip_args = [
        "--retries=3",
        "--extra-index-url=https://download.pytorch.org/whl/cu128",
    ],
    hub_name = "pypi",
    python_version = "3.13",
    requirements_lock = "//:requirements.txt",
)

# Imports the pip toolchain generated by the given module extension into the scope of the current module.
use_repo(pip, "pypi")

# Improve mypy's type checking with available type stubs
types = use_extension("@rules_mypy//mypy:types.bzl", "types")
types.requirements(
    name = "pip_types",
    pip_requirements = "@pypi//:requirements.bzl",
    requirements_txt = "//:requirements.txt",
)
use_repo(types, "pip_types")

# Add external repo dependencies
# Custom http_archive extension (supports ~/ in netrc paths)
http_archive = use_extension("//third_party:http_archive.bzl", "http_archive")
http_archive.archive(
    name = "cosmos_drive_dreams_toolkits",
    add_prefix = "third_party/cosmos_drive_dreams_toolkits",
    build_file = "//third_party:BUILD.cosmos_drive_dreams_toolkits",
    integrity = "sha256-FpKCpKK8jgxkocXZQCF1q7oSKcS1JqmacmY5dAGShZQ=",
    strip_prefix = "Cosmos-Drive-Dreams-908ba8f65463a222e46127222d669e40b778986d/cosmos-drive-dreams-toolkits",
    url = "https://github.com/nv-tlabs/Cosmos-Drive-Dreams/archive/908ba8f65463a222e46127222d669e40b778986d.zip",
)
use_repo(
    http_archive,
    "cosmos_drive_dreams_toolkits",
)

### Base Images for Microservices ###
# Below images are available for use as the base image for microservices. Choose the image that meets the
# minimum requirements for the microservice.
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# CUDA CUDNN base image
oci.pull(
    name = "cuda_cudnn_image",
    digest = "sha256:59e0e4376a0f16d10b03d3a14344b80a866a1674cb4948cb318291387ac05010",
    image = "nvcr.io/nvidia/cuda:12.8.1-cudnn-runtime-ubuntu22.04",
    platforms = ["linux/amd64"],
)

# Standard Ubuntu 22.04 base image (for non-GPU microservices)
oci.pull(
    name = "ubuntu_22_04_image",
    digest = "sha256:fb4fe7a2351bd191ed80b9deb85bd699eeedb7ad56e3a9c9a2193c34f6e346e1",
    image = "nvcr.io/nvidia/base/ubuntu:jammy-20251013",
    platforms = ["linux/amd64"],
)

# NVIDIA distroless Python 3.13 base image (for non-GPU microservices)
oci.pull(
    name = "nvidia_distroless_python_313_image",
    digest = "sha256:f47f80dbac70ecf7f8dc0a58b4aeab884814d0338034c8ba23bd124dac1900b5",
    image = "nvcr.io/nvidia/distroless/python:3.13-v4.0.2",
    platforms = ["linux/amd64"],
)
use_repo(
    oci,
    "cuda_cudnn_image",
    "cuda_cudnn_image_linux_amd64",
    "nvidia_distroless_python_313_image",
    "nvidia_distroless_python_313_image_linux_amd64",
    "ubuntu_22_04_image",
    "ubuntu_22_04_image_linux_amd64",
)

### Debian Package Layers for Microservice Images ###
# Resolves and downloads .deb packages at build time, producing tar layers that are added to OCI images via rules_oci.
apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.install(
    name = "obstacle_correspondence_packages",
    lock = "//services/obstacle_correspondence:packages.lock.json",
    manifest = "//services/obstacle_correspondence:packages.yaml",
    mergedusr = True,
)
apt.install(
    name = "vlm_packages",
    lock = "//services/vlm:packages.lock.json",
    manifest = "//services/vlm:packages.yaml",
    mergedusr = True,
)
apt.install(
    name = "hallucination_packages",
    lock = "//services/hallucination:packages.lock.json",
    manifest = "//services/hallucination:packages.yaml",
    mergedusr = True,
)
apt.install(
    name = "attribute_verification_packages",
    lock = "//services/attribute_verification:packages.lock.json",
    manifest = "//services/attribute_verification:packages.yaml",
    mergedusr = True,
)
use_repo(
    apt,
    "attribute_verification_packages",
    "hallucination_packages",
    "obstacle_correspondence_packages",
    "vlm_packages",
)

### Pre-downloaded .deb packages for microservice images ###
# These packages come from NVIDIA's flat apt repo which rules_distroless cannot resolve.
# Pre-downloading the .deb files eliminates the need for apt-get update/install at container
# startup, saving ~2 minutes of network I/O per container launch.
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "cuda_cupti_12_8_deb",
    downloaded_file_path = "cuda-cupti-12-8.deb",
    sha256 = "cc73a4e090945b020fb0caa65830b9d12421d5cf802db5f977b1a3d7a78e9a68",
    urls = ["https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-cupti-12-8_12.8.90-1_amd64.deb"],
)

http_file(
    name = "cusparselt_cuda_12_deb",
    downloaded_file_path = "cusparselt-cuda-12.deb",
    sha256 = "a67fa2f197cc6dc8beba2a8e83456f8ade1344827ba26e0ab1dc2069df9240d9",
    urls = ["https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cusparselt-cuda-12_0.8.1.1-1_amd64.deb"],
)

http_file(
    name = "libcusparselt0_cuda_12_deb",
    downloaded_file_path = "libcusparselt0-cuda-12.deb",
    sha256 = "fda4ce288116b5e65d6abe5bd71724f0fe10d4ff2e5736fc21961ea09ecb5930",
    urls = ["https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/libcusparselt0-cuda-12_0.8.1.1-1_amd64.deb"],
)

http_file(
    name = "libcusparselt0_dev_cuda_12_deb",
    downloaded_file_path = "libcusparselt0-dev-cuda-12.deb",
    sha256 = "b841487312c107190ac5656c880dadb7e4f02ed10ad03df483e55d7b49995cbe",
    urls = ["https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/libcusparselt0-dev-cuda-12_0.8.1.1-1_amd64.deb"],
)

# NCCL 2.27.5 to replace the base image's 2.25.1 which is missing symbols (ncclCommWindowRegister)
# needed by torch 2.9+cu128. Installed via dpkg -i in the OCI container startup script.
http_file(
    name = "libnccl2_deb",
    downloaded_file_path = "libnccl2.deb",
    sha256 = "bfbad0c89f77d09406f8947f10c2ef7a2ba1b4fa2689b8772d0d85240c787315",
    urls = ["https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/libnccl2_2.27.5-1+cuda12.4_amd64.deb"],
)

# NVSHMEM 3.3.20 provides libnvshmem_host.so.3 required by torch 2.9+.
# Installed to /usr/lib/x86_64-linux-gnu/nvshmem/12 (non-standard path, needs ldconfig conf).
http_file(
    name = "libnvshmem3_cuda_12_deb",
    downloaded_file_path = "libnvshmem3-cuda-12.deb",
    sha256 = "275b773bd54f33438d22526f34daa908f3a7537129791430e23801d7e8ffa8ff",
    urls = ["https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/libnvshmem3-cuda-12_3.3.20-1_amd64.deb"],
)
